Fix bug on mobile where logos would spill over

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,8 +59,10 @@ div.main-logo {
 
 .sponsors img {
 	display: inline-block;
-	margin-right: 40px;
+    margin-right: 40px;
+    max-width: 100%;
 }
+
 .title-sponsors img{
     max-height: 90px;
 }
